force-app/main/default/objects/Brand_Savings_Plan__c/Brand_Savings_Plan__c.object-meta.xml
<CustomObject>
    <description><Brand> Savings Plan (TPA) — Argentina vehicle savings plan with quotas and group/order numbers.</description>
    <label><Brand> Savings Plan</label>
    <nameField>
        <label>TPA Number</label>
        <displayFormat>TPA-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel><Brand> Savings Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>