force-app/main/default/objects/Brand_Savings_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer account that owns this TPA plan.</description>
    <inlineHelpText>The customer enrolled in this Plan de Ahorro.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Savings Plans</relationshipLabel>
    <relationshipName>TPA_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>