force-app/main/default/objects/Brand_Savings_Plan__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Total outstanding balance on the plan.</description>
    <inlineHelpText>Remaining balance owed in ARS.</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>