force-app/main/default/objects/Brand_Savings_Plan__c/fields/Completion_Pct__c.field-meta.xml
<CustomField>
    <fullName>Completion_Pct__c</fullName>
    <description>Calculated percent of the plan completed (paid quotas / total quotas).</description>
    <formula>IF(Total_Quotas__c &gt; 0, (Paid_Quotas__c / Total_Quotas__c) * 100, 0)</formula>
    <inlineHelpText>Percent of the plan completed.</inlineHelpText>
    <label>Completion Pct</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>