force-app/main/default/objects/Brand_Savings_Plan__c/fields/Delivery_ETA__c.field-meta.xml
<CustomField>
    <fullName>Delivery_ETA__c</fullName>
    <description>Estimated vehicle delivery date once the plan is fulfilled.</description>
    <inlineHelpText>When the customer is expected to receive the vehicle.</inlineHelpText>
    <label>Delivery ETA</label>
    <type>Date</type>
</CustomField>