force-app/main/default/objects/Brand_Savings_Plan__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>TPA group number identifying the savings plan group (e.g., 777). Combined with Order Number for unique plan identity.</description>
    <externalId>true</externalId>
    <inlineHelpText>Group number — used together with the order number to identify the plan.</inlineHelpText>
    <label>Group Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>