force-app/main/default/objects/Brand_Savings_Plan__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <description>Date of the next scheduled payment.</description>
    <inlineHelpText>When the next quota is due.</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>