force-app/main/default/objects/Brand_Savings_Plan__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>TPA order number within the group (e.g., 42). Used together with Group Number to identify a specific subscriber.</description>
    <inlineHelpText>Order number within the group.</inlineHelpText>
    <label>Order Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>