force-app/main/default/objects/Brand_Savings_Plan__c/fields/Paid_Quotas__c.field-meta.xml
<CustomField>
    <fullName>Paid_Quotas__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of quotas the customer has already paid.</description>
    <inlineHelpText>Number of quotas paid to date.</inlineHelpText>
    <label>Paid Quotas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>