force-app/main/default/objects/Brand_Savings_Plan__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <description>Allowed payment channels for this customer's TPA quotas.</description>
    <inlineHelpText>Channels by which the customer can pay (MercadoPago, Rapipago, etc.).</inlineHelpText>
    <label>Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MercadoPago</fullName>
            </value>
            <value>
                <fullName>Rapipago</fullName>
            </value>
            <value>
                <fullName>PagoFacil</fullName>
                <label>Pago Facil</label>
            </value>
            <value>
                <fullName>HomeBanking</fullName>
                <label>Home Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>