force-app/main/default/objects/Brand_Savings_Plan__c/fields/Pending_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quota_Amount__c</fullName>
    <description>Amount due for the next quota (current period).</description>
    <inlineHelpText>Amount of the next pending payment in ARS.</inlineHelpText>
    <label>Pending Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>