force-app/main/default/objects/Brand_Savings_Plan__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <description>Vehicle / plan description (e.g., "<Brand> Yaris HB").</description>
    <inlineHelpText>Vehicle the customer is saving toward.</inlineHelpText>
    <label>Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>