force-app/main/default/objects/Brand_Savings_Plan__c/fields/Send_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Email__c</fullName>
    <description>Email address to send the digital coupon / payment voucher.</description>
    <inlineHelpText>Email used to deliver the cupón.</inlineHelpText>
    <label>Send To Email</label>
    <type>Email</type>
</CustomField>