force-app/main/default/objects/Brand_Savings_Plan__c/fields/Total_Quotas__c.field-meta.xml
<CustomField>
    <fullName>Total_Quotas__c</fullName>
    <defaultValue>84</defaultValue>
    <description>Total number of quotas (installments) in the plan. TPA standard plans are 84 months.</description>
    <inlineHelpText>Total quotas in the plan (typically 84).</inlineHelpText>
    <label>Total Quotas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>